--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 </head>
-<body style="height:100vh; margin: 0">
+<body style="height:100vh; margin: 0; background-color: black">
     <script src=script.js>
 </script>
 </body>
